samples/_failures_safe/1761594139_d1257e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b29ecfd1.c: In function ‘main’:
./samples/SAFE/__tmp_b29ecfd1.c:161:5: error: expected declaration or statement at end of input
  161 |     int col = 1;
      |     ^~~
